<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              tools:context=".MainActivity" >

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:id="@+id/dataImageView"
                android:paddingTop="10dp"/>
        <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/current_answer"
                android:id="@+id/currentAnswerTextView" android:paddingLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="6">
        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/is_right"
                android:id="@+id/isRightButton"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/is_empty"
                android:id="@+id/isEmptyButton"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/quick_input"
                android:id="@+id/quickInputButton"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/input"
                android:id="@+id/inputButton"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/not_clear"
                android:id="@+id/notClearButton"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ignore"
                android:id="@+id/ignoreButton"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/link_to_fan_page"
                android:id="@+id/linkToFanPageTextView" android:gravity="right" android:paddingRight="5dp"/>
    </LinearLayout>
</LinearLayout>

